# metropolis-mcmc

./: .gitignore  README.md  mcmc_metropolis_1d.py  pyproject.toml
src/mcmc_1d/: __init__.py  cli.py  diagnostics.py  experiment.py  plotting.py  results.py  sampler.py  targets.py
tests/: test_diagnostics.py  test_sampler.py  test_targets.py
